[package]
name = "dashcon_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11.5"
tokio = { version = "1.21.0", features = ["full"] }
uwuify = "0.2.2"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.17"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"

